// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCheckboxSearchSubGroups renders groups of checkboxes in correct order 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-checkboxes"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
      Choose options
    </legend>
    <button aria-disabled="false"
            id="test-checkboxes-all"
            type="button"
            class="button noUnderline govuk-!-margin-bottom-4"
    >
      Select all 4 options
    </button>
    <label class="govuk-label"
           for="test-checkboxes-search"
    >
      Search options
    </label>
    <div class>
      <input name="testCheckboxes-search"
             class="govuk-input searchInput govuk-input--width-20"
             id="test-checkboxes-search"
             type="text"
             value
      >
    </div>
    <div class="optionsContainer"
         aria-live="assertive"
    >
      <div class="govuk-form-group">
        <fieldset class="govuk-fieldset"
                  id="test-checkboxes-options-1"
        >
          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
            Group A
          </legend>
          <div class="govuk-checkboxes">
            <button aria-disabled="false"
                    id="test-checkboxes-options-1-all"
                    type="button"
                    class="button noUnderline selectAll"
            >
              Select all 2 subgroup options
              <span class="govuk-visually-hidden">
                for Group A
              </span>
            </button>
            <div class="govuk-checkboxes__item"
                 data-testid="Checkbox item for Checkbox 1"
            >
              <input class="govuk-checkboxes__input"
                     id="test-checkboxes-options-1-1"
                     name="testCheckboxes"
                     type="checkbox"
                     value="1"
              >
              <label class="govuk-label govuk-checkboxes__label"
                     for="test-checkboxes-options-1-1"
              >
                Checkbox 1
              </label>
            </div>
            <div class="govuk-checkboxes__item"
                 data-testid="Checkbox item for Checkbox 2"
            >
              <input class="govuk-checkboxes__input"
                     id="test-checkboxes-options-1-2"
                     name="testCheckboxes"
                     type="checkbox"
                     value="2"
              >
              <label class="govuk-label govuk-checkboxes__label"
                     for="test-checkboxes-options-1-2"
              >
                Checkbox 2
              </label>
            </div>
          </div>
        </fieldset>
      </div>
      <div class="govuk-form-group">
        <fieldset class="govuk-fieldset"
                  id="test-checkboxes-options-2"
        >
          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
            Group B
          </legend>
          <div class="govuk-checkboxes">
            <button aria-disabled="false"
                    id="test-checkboxes-options-2-all"
                    type="button"
                    class="button noUnderline selectAll"
            >
              Select all 2 subgroup options
              <span class="govuk-visually-hidden">
                for Group B
              </span>
            </button>
            <div class="govuk-checkboxes__item"
                 data-testid="Checkbox item for Checkbox 3"
            >
              <input class="govuk-checkboxes__input"
                     id="test-checkboxes-options-2-3"
                     name="testCheckboxes"
                     type="checkbox"
                     value="3"
              >
              <label class="govuk-label govuk-checkboxes__label"
                     for="test-checkboxes-options-2-3"
              >
                Checkbox 3
              </label>
            </div>
            <div class="govuk-checkboxes__item"
                 data-testid="Checkbox item for Checkbox 4"
            >
              <input class="govuk-checkboxes__input"
                     id="test-checkboxes-options-2-4"
                     name="testCheckboxes"
                     type="checkbox"
                     value="4"
              >
              <label class="govuk-label govuk-checkboxes__label"
                     for="test-checkboxes-options-2-4"
              >
                Checkbox 4
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`FormCheckboxSearchSubGroups renders single group of checkboxes correctly 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-checkboxes"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
      Choose options
    </legend>
    <label class="govuk-label"
           for="test-checkboxes-search"
    >
      Search options
    </label>
    <div class>
      <input name="testCheckboxes-search"
             class="govuk-input searchInput govuk-input--width-20"
             id="test-checkboxes-search"
             type="text"
             value
      >
    </div>
    <div class="optionsContainer"
         aria-live="assertive"
    >
      <div class="govuk-checkboxes">
        <button aria-disabled="false"
                id="test-checkboxes-1-all"
                type="button"
                class="button noUnderline selectAll"
        >
          Select all 2 options
        </button>
        <div class="govuk-checkboxes__item"
             data-testid="Checkbox item for Checkbox 1"
        >
          <input class="govuk-checkboxes__input"
                 id="test-checkboxes-1-1"
                 name="testCheckboxes"
                 type="checkbox"
                 value="1"
          >
          <label class="govuk-label govuk-checkboxes__label"
                 for="test-checkboxes-1-1"
          >
            Checkbox 1
          </label>
        </div>
        <div class="govuk-checkboxes__item"
             data-testid="Checkbox item for Checkbox 2"
        >
          <input class="govuk-checkboxes__input"
                 id="test-checkboxes-1-2"
                 name="testCheckboxes"
                 type="checkbox"
                 value="2"
          >
          <label class="govuk-label govuk-checkboxes__label"
                 for="test-checkboxes-1-2"
          >
            Checkbox 2
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
